--- a/home.html
+++ b/home.html
@@ -95,30 +95,30 @@
 
 <!-- footer -->
 <footer class="light-blue accent-3 page-footer">
-      <div class="container">
-        <div class="row">
-          <div class="col l6 s12">
-            <h5 class="white-text">Get in Touch with Szuster Psychiatry Today</h5>
-            <p class="grey-text text-lighten-4">(718) 396-6766</p>
-          </div>
-          <div class="col l4 offset-l2 s12">
-            <h5 class="white-text">Links</h5>
-            <ul>
-              <li><a class="grey-text text-lighten-3" href="directions.html">Directions</a></li>
-              <li><a class="grey-text text-lighten-3" href="contact.html">Get in Touch</a></li>
-            </ul>
-          </div>
-        </div>
+  <div class="container">
+    <div class="row">
+      <div class="col l6 s12">
+        <h5 class="white-text">Get in Touch with Szuster Psychiatry Today</h5>
+        <p class="grey-text text-lighten-4">(718) 396-6766</p>
       </div>
-      <div class="footer-copyright">
-        <div class="container"> All Rights Reserved,  &copy; Szuster Psychiatry
-          © 2021
-          <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-          </div>
-        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-        </div>
+      <div class="col l4 offset-l2 s12">
+        <h5 class="white-text">Links</h5>
+        <ul>
+          <li><a class="grey-text text-lighten-3" href="directions.html">Directions</a></li>
+          <li><a class="grey-text text-lighten-3" href="contact.html">Get in Touch</a></li>
+        </ul>
       </div>
-    </footer>
+    </div>
+  </div>
+  <div class="footer-copyright">
+    <div class="container"> All Rights Reserved,  &copy; Szuster Psychiatry
+      © 2021
+      <!-- <a class="grey-text text-lighten-4 right" href="#!">More Links</a> -->
+      </div>
+    <!-- <a class="grey-text text-lighten-4 right" href="#!">More Links</a> -->
+    </div>
+  </div>
+</footer>
     
 </body>
 </html>
