--- a/thanks.html
+++ b/thanks.html
@@ -58,9 +58,9 @@
   <div class="footer-copyright">
     <div class="container"> All Rights Reserved,  &copy; Szuster Psychiatry
       © 2021
-      <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+      <!-- <a class="grey-text text-lighten-4 right" href="#!">More Links</a> -->
       </div>
-    <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+    <!-- <a class="grey-text text-lighten-4 right" href="#!">More Links</a> -->
     </div>
   </div>
 </footer>
