--- a/directions.html
+++ b/directions.html
@@ -44,8 +44,8 @@
     <!-- map -->
 
     <div id="map">
-    <div class="mapouter"><div class="gmap_canvas"><iframe max-width="100%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=82-11%2037th%20Ave,%20Flushing,%20NY%2011372&t=&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net/blog/divi-discount-code-elegant-themes-coupon/">divi discount</a><br>
-      <a href="https://www.embedgooglemap.net">embedgooglemap.net</a></div></div>
+    <div class="mapouter"><div class="gmap_canvas"><iframe width="500"height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=82-11%2037th%20Ave,%20Flushing,%20NY%2011372&t=&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net/blog/divi-discount-code-elegant-themes-coupon/"><br></a><br>
+      <a href="https://www.embedgooglemap.net"></a></div></div>
   </div>
 
 <div>
