--- a/directions.html
+++ b/directions.html
@@ -41,15 +41,14 @@
       <main>
     <h1>Directions</h1>
     <h5>We have been serving the Jackson Heights and greater New York City area since 2003</h5>
+    <h4>(718) 396-6766</h4>
     <!-- map -->
-
-    <div id="map">
-    <div class="mapouter"><div class="gmap_canvas"><iframe width="500"height="300" id="gmap_canvas" src="https://maps.google.com/maps?q=82-11%2037th%20Ave,%20Flushing,%20NY%2011372&t=&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net/blog/divi-discount-code-elegant-themes-coupon/"><br></a><br>
-      <a href="https://www.embedgooglemap.net"></a></div></div>
-  </div>
+    <center>
+    <div class="mapouter"><div class="gmap_canvas"><iframe width="300" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=82-11%2037th%20Avenue&t=&z=11&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://fmovies-online.net">fmovies</a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:300px;}</style><a href="https://www.embedgooglemap.net">google map code</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:300px;}</style></div></div>
+  </center>
 
 <div>
-  <h4>(718) 396-6766</h4>
+
   <h4>82-11 37th Avenue</h4>
   <h4>Suite 401</h4>
   <h4>Jackson Heights, NY 11372</h4>
